# Sistemas-Distribuidos-Practica-1

./: README.md
fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fileManager  filemanager.cpp  filemanager.h  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  filemanager_stub.h  mainCliente  mainCliente.cpp  mainServidor  mainServidor.cpp  main_fm.cpp
multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  c  caca.txt  cmake_install.cmake  mainClienteMultMatrix  mainClienteMultMatrix.cpp  mainServidorMultMatrix  mainServidorMultMatrix.cpp  multMatrix  multmatrix.cpp  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt
